manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: morgan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 418295722497.dkr.ecr.ap-northeast-2.amazonaws.com/kubeadm/frontend:latest
        ports:
        - containerPort: 80
